# sentiment_analysis

./: LICENSE  README.md  pyproject.toml  technical_documentation.md
datasets/ftx/: ftx_articles.txt  ftx_neg.txt  ftx_pos.txt  ftx_price.txt  ftx_results.txt
datasets/lunc/: lunc_articles.txt  lunc_neg.txt  lunc_pos.txt  lunc_price.txt  lunc_results.txt
datasets/ust/: ust_articles.txt  ust_neg.txt  ust_pos.txt  ust_price.txt  ust_results.txt
sentiment_analysis/: calculate_sentiment.py  main.py  old_visualize_result.py  preprocess.py  process_folders.py  save_sentiment.py  significance.py  visualize_result.py
tests/: test_calculate_sentiment.py  test_output.csv  test_preprocess.py  test_save_sentiment.py  test_significance.py  test_visualize_result.py
