[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sentiment_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.2"
scipy = "1.13.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
contourpy = "1.2.1"
cycler = "0.12.1"
distlib = "0.3.8"
filelock = "3.13.4"
fonttools = "4.51.0"
fsspec = "2024.3.1"
huggingface-hub = "0.22.2"
idna = "3.7"
jinja2 = "3.1.3"
kiwisolver = "1.4.5"
markupsafe = "2.1.5"
matplotlib = "3.8.4"
mpmath = "1.3.0"
networkx = "3.3"
numpy = "1.26.4"
packaging = "24.0"
pillow = "10.3.0"
platformdirs = "4.2.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
pyyaml = "6.0.1"
regex = "2024.4.16"
requests = "2.31.0"
safetensors = "0.4.3"
six = "1.16.0"
sympy = "1.12"
tokenizers = "0.19.1"
torch = "2.2.2"
tqdm = "4.66.2"
transformers = "4.40.0"
typing-extensions = "4.11.0"
tzdata = "2024.1"
urllib3 = "2.2.1"
virtualenv = "20.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
